--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </section>
   <section class="avatartext">
      <!-- TEXT FROM AVATAR -->
-    <p class="greeting">Bot's message</p>   
+    <p id="randomText">Bot's message</p>   
   </section>
     
       
