--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  
   <title>Document</title>
 </head>
 
@@ -25,13 +26,13 @@
   </section>
   <section class="avatartext">
      <!-- TEXT FROM AVATAR -->
-    <p>Bot's message</p>   
+    <p id="greetings"></p>   
   </section>
     
       
     <!-- TEXT BOX -->
-  <section class ="useraction">
-    <textarea cols="40" rows="5"></textarea> 
+  <section class="user">
+    <textarea id="userInput" cols="40" rows="5"></textarea> 
   
     <!-- END TEXT BOX --> 
     <!-- SEND BUTTON -->
@@ -40,5 +41,7 @@
     </div>
   </section>
   <!-- END SEND BUTTON --> 
+
+  <script src="test.js"></script> 
 </body>
 </html>
