--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class = "container">
   <header>
-    <!-- TITLE -->
+    <!-----------------------------------------------------------------------------------TITLE ---------------------------------------------------------------------------------->
     <h1>CHATBOT</h1>
   </header> 
   <section class = "avatar">
@@ -24,12 +24,12 @@
     <!-- <img src="images/mad-monster.png" alt="mad avatar" id="mad">   -->
   </section>
   <section class="avatartext">
-     <!-- TEXT FROM AVATAR -->
+     <!------------------------------------------------------------------------------TEXT FROM AVATAR---------------------------------------------------------------------------->
     <p id="greetings">Bot's message</p>   
   </section>
     
       
-    <!-- TEXT BOX -->
+    <!----------------------------------------------------------------------------------- TEXT BOX ------------------------------------------------------------------------------>
   <section class ="useraction">
     <textarea id="input" cols="40" rows="5"></textarea> 
   
