--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!-- OUR AVATAR SHOWING DIFFERENT EMOTIONS DEPENDING ON THE INTERACTION WITH THE USER -->
     <!-- (we could use an if else in js to change photo display) -->
     <!-- WELCOME AVATAR -->
-    <img src="https://github.com/FrancoisLeleu/Micro_Chatbot_Challenge/blob/Sara/images/welcome-monster.png?raw=true" alt="avatar" id="welcome">
+    <img src="https://github.com/FrancoisLeleu/Micro_Chatbot_Challenge/blob/Sara/images/welcome-monster.png?raw=true" alt="avatar" id="welcomeBot">
     <!-- AVATAR FOR "I DIDN'T UNDERSTAND" -->
-    <!--<img src="images/frustrated-monster.png" alt="frustrated avatar" id="frustrated"> -->
+    <img src="https://github.com/FrancoisLeleu/Micro_Chatbot_Challenge/blob/sandrine/image%20folder/frustrated-monster.png?raw=true" alt="frustrated avatar" id="frustratedBot"> 
     <!-- MAD AVATAR -->
-     <!--<img src="images/mad-monster.png" alt="mad avatar" id="mad">  -->
+     <img src="https://github.com/FrancoisLeleu/Micro_Chatbot_Challenge/blob/sandrine/image%20folder/mad-monster.png?raw=true" alt="mad avatar" id="madBot"> 
   </section>
   <section class="avatartext">
      <!-- TEXT FROM AVATAR -->
@@ -40,7 +40,7 @@
     <!-- SEND BUTTON -->
     <div>
       <button type="button"  id="send" onclick="sendInput()">send</button>
-      
+
     </div>
   </section>
   <!-- END SEND BUTTON --> 
