--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!-- WELCOME AVATAR -->
     <img src="images/welcome-monster.png" alt="avatar" id="welcome">
     <!-- AVATAR FOR "I DIDN'T UNDERSTAND" -->
-    <!--  <img src="images/frustrated-monster.png" alt="frustrated avatar" id="frustrated"> -->
+     <img src="images/frustrated-monster.png" alt="frustrated avatar" id="frustrated">
     <!-- MAD AVATAR -->
-    <!-- <img src="images/mad-monster.png" alt="mad avatar" id="mad">   -->
+    <img src="images/mad-monster.png" alt="mad avatar" id="mad">
   </section>
   <section class="avatartext">
      <!-- TEXT FROM AVATAR -->
@@ -30,8 +30,8 @@
     
       
     <!-- TEXT BOX -->
-  <section class ="useraction">
-    <textarea id="input" cols="40" rows="5"></textarea> 
+  <section class ="user">
+    <textarea id="input" cols="40" rows="5" placeholder="Write your message here !"></textarea> 
   
     <!-- END TEXT BOX --> 
     <!-- SEND BUTTON -->
