--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-francois
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@ francois
 
 <body class = "container">
   <header>
-    <!-----------------------------------------------------------------------------------TITLE ---------------------------------------------------------------------------------->
+    <!-- TITLE -->
     <h1>CHATBOT</h1>
   </header> 
   <section class = "avatar">
@@ -20,32 +19,28 @@ francois
     <!-- WELCOME AVATAR -->
     <img src="images/welcome-monster.png" alt="avatar" id="welcome">
     <!-- AVATAR FOR "I DIDN'T UNDERSTAND" -->
-    <!--  <img src="images/frustrated-monster.png" alt="frustrated avatar" id="frustrated"> -->
+     <img src="images/frustrated-monster.png" alt="frustrated avatar" id="frustrated">
     <!-- MAD AVATAR -->
-    <!-- <img src="images/mad-monster.png" alt="mad avatar" id="mad">   -->
+    <img src="images/mad-monster.png" alt="mad avatar" id="mad">
   </section>
   <section class="avatartext">
-     <!------------------------------------------------------------------------------TEXT FROM AVATAR---------------------------------------------------------------------------->
+     <!-- TEXT FROM AVATAR -->
     <p id="greetings">Bot's message</p>   
   </section>
     
       
-    <!----------------------------------------------------------------------------------- TEXT BOX ------------------------------------------------------------------------------>
-  <section class ="useraction">
-    <textarea id="input" cols="40" rows="5"></textarea> 
+    <!-- TEXT BOX -->
+  <section class ="user">
+    <textarea id="input" cols="40" rows="5" placeholder="Write your message here !"></textarea> 
   
     <!-- END TEXT BOX --> 
     <!-- SEND BUTTON -->
-
     <div>
-      <button type="button"  id="send" onclick="sendInput()">send</button>
+      <button type="button"  id="send">send</button>
     </div>
-
   </section>
-  <!-- END SEND BUTTON --> 
+  <!-- END SEND BUTTON -->
+   
   <script src="test.js"></script>
 </body>
 </html>
-=======
-COUCOU HIBOUUUUUUUUX 
-main
